taskのformでCategoryを選択できるように修正

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div>
     <%= form.label :category_id, style: "display: block" %>
-    <%= form.text_field :category_id %>
+    <%= form.select(:category_id, Category.all.map{ |c| [c.name, c.id] }) %>
   </div>
 
   <div>
