--- a/app/views/top/show.html.erb
+++ b/app/views/top/show.html.erb
@@ -1,3 +1,6 @@
+<a href="https://render.com" target='_blank'>
+  <%= image_tag 'render-banner.png', class: 'mw-100', style: 'width: 100%' %>
+</a>
 <h1>Render ToDo Try Rails App</h1>
 
 <a href='/tasks'>Task List</a>
