--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,14 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Tasks</h1>
+<%= link_to "New task", new_task_path %>
 
 <div id="tasks">
   <% @tasks.each do |task| %>
-    <%= render task %>
-    <p>
-      <%= link_to "Show this task", task %>
-    </p>
+    <%= link_to(task_path(task)) do %>
+      <%= render task %>
+    <% end %>
   <% end %>
 </div>
-
-<%= link_to "New task", new_task_path %>
